# MSB

./: .bumpversion.toml  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
base/: basecontainer.py  baseentity.py
common/super/: manipulator.py  project.py  super.py
common/utils/: validation.py
docs/: README.md  api.md  architecture.md  diagrams.md  examples.md
docs/modules/: base.md  mega.md  super.md  utils.md
mega/: manipulator.py
msb-arch/base/: basecontainer.py
msb-arch/super/: super.py
src/msb_arch/: __init__.py
src/msb_arch/base/: basecontainer.py  baseentity.py
src/msb_arch/mega/: manipulator.py
src/msb_arch/super/: project.py  super.py
super/: __init__.py  project.py  super.py
tests/: test_basecontainer.py  test_baseentity.py  test_manipulator.py  test_project.py  test_super.py  test_utils_functions.py
tests/performance/: test_performance.py
utils/: __init__.py  logging_setup.py  validation.py
