[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msb"
version = "0.1.0"
description = "Mega-Super-Base (MSB) architecture for flexible and extensible Python applications"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE", text = "MSB Software License (non-commercial use; contact for commercial license)"}
authors = [
    {name = "Alexey Rudnitskiy", email = "almax1024@gmail.com"}
]
keywords = ["msb", "architecture", "extensible"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Torward1024/MSB"
Documentation = "https://github.com/Torward1024/MSB/wiki"
Repository = "https://github.com/Torward1024/MSB"
Issues = "https://github.com/Torward1024/MSB/issues"

[tool.setuptools.packages.find]
where = ["msb"]