[metadata]
name = msb
version = 0.1.0
description = Mega-Super-Base (MSB) architecture for flexible and extensible Python applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexey Rudnitskiy
author_email = almax1024@gmail.com
license = MSB Software License
url = https://github.com/Torward1024/MSB
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0

[options.packages.find]
where = msb